# streamlit-workshop

./: .gitignore  README.md  SETUP.md  pyproject.toml
.devcontainer/: devcontainer.json
1-intro/: 1-intro-setup.key  1-intro.key  exercises.txt  review.ipynb  streamlit_app.py
1-intro-setup/: 1-handout.pages  exercises.txt  review.ipynb  scratch.ipynb
2-input/: 2-input.key  exercises.txt  input.ipynb  input_app.py
2-input-graphics/: exercises.txt  input.ipynb
3-graphics/: 3-graphics.key  exercises.txt  graph_app.py  graphs.ipynb
4-deployment/: 4-deployment.key
4-ui/: 4-ui.key  exercises.txt  layout_app.py  layout_backup.py  layout_solution2.py  ui.ipynb
5-bonus/: app1.py  app2.py  app2_solution.py  backend.py  percent-change.ipynb  state_data.csv
5-deployment/: 4-deployment.key  5-deployment.key  exercises.txt
6-organize/: 6-organize-code.key  backend.py  exercises.txt  layout_solution.py  organization.ipynb  organization_app.py
final-app/: final_app.py
slides/: 1-intro.key  2-input.key  3-graphics.key  5-deployment.key
