[project]
name = "streamlit-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "censusdis>=1.4.2",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "kaleido>=1.1.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.49.1",
    "us>=3.2.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "flake8>=7.3.0",
    "ruff>=0.13.0",
]
